# apache-logs-to-mysql

./: .env  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  ap_ap_expense_report_params_all.sql  ap_ap_supplier_sites_all.sql  ap_ap_suppliers.sql  ap_ap_system_parameters_all.sql  ap_routines.sql  ap_schema.sql  apacheLogs2MySQL.py  apacheLogs2MySQL.sql  apache_logs_schema.sql  config.json  config_lists.py  create_http_logs.sql  create_http_logs_schema.sql  files_import.py  files_watch.py  load_dotenv.py  load_system_info.py  logs2mysql.py  pyproject.toml  requirements.txt  settings.env  update_access_log_useragent.py  watch4logs.py
.github/: CHANGELOG.md  CONTRIBUTING.md  FILE_BACKUP_SETTINGS.md  FUNDING.yml  INSTALL.md  README.md  SUPPORT.md  call_processes.sql  check_domain_columns.sql  color.py  mysql_user_and_grants.sql  requirements.txt  settings.env
.github/ISSUE_TEMPLATE/: bug_report.md
apis/: app_settings.py  color_class.py  device_id.py  error_app.py  process_settings.py  properties_app.py  properties_process.py  table_id.py
config/: app_config.py  config_app.py
data/apacheErrorStd/: farmfreshsoftware.error.log-20241114  farmwork.error.log-20241014
data/apache_error/: farmwork.error.log-20241025  farmwork.error.log-20241028
data/apache_host/: farmfreshsoftware.access.log.20241022
data/nginxError/: meatlabel.app.error.log-20251221  meatlabel.app.error.log-20251224  meatlabel.app.error.log-20251225  meatlabel.app.error.log-20251226
data/nginx_error/: meatlabel.app.error.log-20251219  meatlabel.app.error.log-20251220  meatlabel.app.error.log-20251222  meatlabel.app.error.log-20251223  (+2 more)
docs/: CITATION.cff  GOVERNANCE.md  SUPPORT.md
scripts/: mysql_user_and_grants.sql
src/: main.py
(+8 files in other folders)
